# botsch-kobbelt-remesher-libigl

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  remeshmesh  remeshmesh.cpp  setpath.sh
mex/: build_mex.m  remeshmesh_mex.cpp  remeshmesh_mex.m
src/: bindings.cpp  circulation.cpp  collapse_edges.cpp  collapse_edges.h  equalize_valences.cpp  equalize_valences.h  macros.h  remesh_botsch.cpp  remesh_botsch.h  split_edges.cpp  split_edges.h  split_edges_until_bound.cpp  split_edges_until_bound.h  tangential_relaxation.cpp  tangential_relaxation.h
